cm4all-myproxy (0.20) unstable; urgency=low

  * increase listener backlog to 256
  * prometheus: wait for HTTP request to arrive

 --   

cm4all-myproxy (0.19) unstable; urgency=low

  * pg: fix 0.18 regression

 -- Max Kellermann <mk@cm4all.com>  Mon, 12 Aug 2024 14:59:20 +0200

cm4all-myproxy (0.18) unstable; urgency=low

  * pg: fix assertion failure

 -- Max Kellermann <mk@cm4all.com>  Mon, 05 Aug 2024 19:15:29 +0200

cm4all-myproxy (0.17) unstable; urgency=low

  * fix startup crash if bind address is already in use
  * quote client-specified strings for logging
  * export Promtheus metrics

 -- Max Kellermann <mk@cm4all.com>  Fri, 03 May 2024 17:29:01 +0200

cm4all-myproxy (0.16) unstable; urgency=low

  * use an optimized buffer allocator
  * lua/libsodium: add bindings for bin2hex, hex2bin, randombytes,
    crypto_scalarmult_base
  * lua: fix crash if handler keys not strings
  * debian: add missing build-dependency on libsodium-dev

 -- Max Kellermann <mk@cm4all.com>  Fri, 08 Mar 2024 17:51:30 +0100

cm4all-myproxy (0.15) unstable; urgency=low

  * implement auth plugin "client_ed25519"
  * close connection after auth failure

 -- Max Kellermann <mk@cm4all.com>  Mon, 11 Dec 2023 15:00:10 +0100

cm4all-myproxy (0.14) unstable; urgency=low

  * accept OK packet with `info` field missing
  * send ERR to client when connection to server fails
  * implement auth plugin "caching_sha2_password"
  * cluster: prefer nodes where auth fails over unreachable ones
  * cluster: add option "disconnect_unavailable"
  * check: combine client/server capabilities flags with bit-wise "AND"

 -- Max Kellermann <mk@cm4all.com>  Sat, 09 Dec 2023 17:48:33 +0100

cm4all-myproxy (0.13) unstable; urgency=low

  * combine client/server capabilities flags with bit-wise "AND"
  * adjust sequence_id of forwarded OK/ERR packets during handshake
  * lua: close Lua file descriptors when connection is closed
  * lua: refactor the cgroup API